# akamai-inference-optimization

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  cluster-startup.md  hardware.md  phase1-kv-cache-build-log.md  phase2-fermyon-build-log.md  phase3-qwen-image-build-log.md  phase4-build-log.md
docs/phases/: phase1-kv-cache.md  phase2-fermyon-valkey.md  phase3-qwen-image.md  phase4-benchmarks.md
infrastructure/: README.md
infrastructure/terraform/: .terraform.lock.hcl  cluster.tf  main.tf  node-pool-ada-2.tf  node-pool-ada.tf  node-pool-blackwell.tf  outputs.tf  terraform.tfvars.example  variables.tf
phases/phase1-kv-cache/: README.md  demo.py
phases/phase1-kv-cache/kv_cache/: __init__.py  attention.py  generate.py  model.py  tokenizer.py
phases/phase1-kv-cache/results/: phase1_timing.json
phases/phase1-kv-cache/tests/: test_attention.py
phases/phase2-prefix-cache/: README.md
phases/phase2-prefix-cache/benchmark/: bench_cache.py  load_gen.py  report.py  requirements.txt
phases/phase2-prefix-cache/fermyon/: Cargo.toml  Dockerfile  spin.toml
phases/phase2-prefix-cache/fermyon/health/: Cargo.toml
phases/phase2-prefix-cache/fermyon/health/src/: lib.rs
phases/phase2-prefix-cache/fermyon/k8s/: fermyon-deployment.yaml
phases/phase2-prefix-cache/fermyon/proxy/: Cargo.toml
phases/phase2-prefix-cache/fermyon/proxy/src/: lib.rs
phases/phase2-prefix-cache/fermyon/src/: lib.rs
phases/phase2-prefix-cache/results/: phase2_cache_benchmark.json  phase2_prefix_cache_baseline.json  phase2_valkey_verified.json
phases/phase2-prefix-cache/tests/: test_chat_cache.py  test_prefix_hash.py
phases/phase2-prefix-cache/valkey/: valkey.yaml
phases/phase2-prefix-cache/vllm/: Dockerfile  vllm.yaml  (+3 more)
phases/phase3-qwen-image/: .dockerignore  Dockerfile  README.md  requirements.txt
phases/phase4-benchmarks/: .gitignore  README.md  requirements.txt
results/: phase4_raw_benchmark.csv
(+32 files in other folders)
