[package]
name        = "proxy"
version     = "0.1.0"
edition     = "2021"
description = "Fermyon Wasm caching proxy — Phase 2 /v1/chat/completions handler"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk   = "3.0"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
anyhow     = "1"
